# huginn

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Data/Interface/Huginn/: Intuition.swf
Data/SKSE/Plugins/dmenu/customSettings/: Huginn.json
cmake/: Plugin.h.in  version.rc.in
configs/: Huginn.ini  Huginn_Overrides.ini  Huginn_keybindings.ini
configs/templates/: battlemage.ini  paladin.ini  pure-mage.ini  stealth-archer.ini  summoner.ini  survivalist.ini
docs/: roadmap.md
docs/nexus/: description.bbcode
docs/playtest/: LongPlaySoak.md
docs/refactor/: fix-patterns.md
fomod/: ModuleConfig.xml  info.xml
scripts/: release.bat  release.ps1
src/: CMakeLists.txt  Config.h  Globals.cpp  Globals.h  IniLoad.h  Main.cpp  PCH.h  Profiling.h  Tests.cpp  Tests.h  TracyMemory.cpp  UpdateLoop.cpp  UpdateLoop.h
src/candidate/: CandidateConfig.h  CandidateFilters.cpp  CandidateFilters.h  CandidateGenerator.cpp  CandidateGenerator.h  CandidateTypes.cpp  CandidateTypes.h  CooldownManager.cpp  CooldownManager.h
src/console/: ConsoleCommands.cpp  ConsoleCommands.h
src/context/: ContextRuleEngine.cpp  ContextRuleEngine.h  ContextWeightConfig.h  ContextWeightSettings.cpp  ContextWeightSettings.h
src/core/: RingBuffer.h
src/display/: IDisplayBackend.h  IntuitionBackend.cpp  IntuitionBackend.h  WheelerBackend.cpp  WheelerBackend.h
src/input/: EquipHand.h  EquipManager.cpp  EquipManager.h  InputHandler.cpp  InputHandler.h  KeybindingSettings.cpp  KeybindingSettings.h
src/learning/: CorrelationBooster.cpp  CorrelationBooster.h  EquipEvent.h  EquipEventBus.cpp  EquipEventBus.h  EquipSourceTracker.h  EquipSubscribers.h  ExternalEquipLearner.cpp  ExternalEquipLearner.h  ExternalEquipListener.h  FeatureQLearner.cpp  FeatureQLearner.h  InventoryExitTracker.cpp  InventoryExitTracker.h  LearningSettings.cpp  LearningSettings.h  PipelineStateCache.h  PotionDiscriminator.cpp  PotionDiscriminator.h  PriorCalculator.cpp  PriorCalculator.h  ScoredCandidate.h  ScorerConfig.h  ScorerSettings.cpp  ScorerSettings.h  StateFeatures.h  UsageMemory.h  UtilityScorer.cpp  UtilityScorer.h  WildcardManager.cpp  WildcardManager.h
src/learning/item/: ItemClassifier.cpp  ItemClassifier.h  ItemData.h  ItemOverrides.cpp  ItemOverrides.h  ItemRegistry.cpp  ItemRegistry.h
src/override/: OverrideConditions.h  OverrideConfig.h  OverrideManager.cpp  OverrideManager.h  OverrideSettings.cpp
src/persist/: QLearnerSerializer.cpp  QLearnerSerializer.h
src/pipeline/: PipelineCoordinator.cpp  PipelineCoordinator.h
src/scroll/: ScrollClassifier.cpp  ScrollClassifier.h  ScrollData.h  ScrollRegistry.cpp  ScrollRegistry.h
src/settings/: SettingsReloader.cpp  SettingsReloader.h
src/slot/: SlotAllocator.cpp  SlotAllocator.h  SlotAssignment.h  SlotClassifier.cpp  SlotClassifier.h  SlotConfig.h  SlotLocker.cpp  SlotLocker.h  SlotSettings.cpp  SlotSettings.h  SlotUtils.h
src/spell/: SpellClassifier.cpp  SpellClassifier.h  SpellData.h  SpellOverrides.cpp  SpellOverrides.h  SpellRegistry.cpp  SpellRegistry.h
src/state/: ContextWeightSettings.cpp  DamageEventSink.cpp  DamageEventSink.h  GameState.h  PlayerActorState.h  StateConstants.h  StateEvaluator.cpp  StateEvaluator.h  StateManager.cpp  StateManager.h  StateManagerConstants.h  StateManager_Equipment.cpp  StateManager_HealthTracking.cpp  StateManager_MagicEffects.cpp  StateManager_MagickaTracking.cpp  StateManager_Position.cpp  StateManager_Resistances.cpp  StateManager_StaminaTracking.cpp  StateManager_Survival.cpp  StateManager_Targets.cpp  StateManager_Vitals.cpp  StateManager_World.cpp  StateTypes.h  TargetActorState.h  WorldState.h
src/swf/: Intuition.as  Intuition.swf  build.sh  intuition.xml
src/telemetry/: SoakMetrics.cpp  SoakMetrics.h
src/ui/: D3D11Hook.cpp  D3D11Hook.h  DebugInputHook.cpp  DebugInputHook.h  DebugSettings.cpp  DebugSettings.h  HudVisibilityManager.cpp  HudVisibilityManager.h  ImGuiCommon.h  ImGuiRenderer.cpp  ImGuiRenderer.h  IntuitionMenu.cpp  IntuitionMenu.h  IntuitionSettings.cpp  IntuitionSettings.h  RegistryDebugWidget.cpp  RegistryDebugWidget.h  SlotTypes.h  StateManagerDebugWidget.cpp  StateManagerDebugWidget.h  UtilityScorerDebugWidget.cpp  UtilityScorerDebugWidget.h  WelcomeBanner.cpp  WelcomeBanner.h
src/update/: UpdateHandler.cpp  UpdateHandler.h
src/util/: AlgorithmUtils.h  AtomicGuard.h  ExtraListStability.cpp  ExtraListStability.h  IntervalTimer.h  InventoryUtil.h  ScopedTimer.h
src/weapon/: WeaponClassifier.cpp  WeaponClassifier.h  WeaponData.h  WeaponRegistry.cpp  WeaponRegistry.h
src/wheeler/: WheelerClient.cpp  WheelerClient.h  WheelerSettings.cpp  WheelerSettings.h
vcpkg-overlay/ports/imgui/: portfile.cmake
